syntax = "proto3";

package remote;

option go_package = "./remote;remote";
option java_multiple_files = true;
option java_package = "io.turbo-geth.db";
option java_outer_classname = "ETHBACKEND";

service ETHBACKEND {
  rpc Add(TxRequest) returns (AddReply);
  rpc Etherbase(EtherbaseRequest) returns (EtherbaseReply);
  rpc NetVersion(NetVersionRequest) returns (NetVersionReply);
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeReply);
}

message TxRequest {
  bytes signedtx = 1;
}

message AddReply {
  bytes hash = 1;
}

message EtherbaseRequest {
}

message EtherbaseReply {
  bytes hash = 1;
}

message NetVersionRequest {
}

message NetVersionReply {
  uint64 id = 1;
}

message SubscribeRequest {
}

message SubscribeReply {
  uint64 type = 1; // type (only header at that moment)
  bytes data = 2; //  serialized data
}

